--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>SocialScale - Professional Service</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@600&family=Inter:wght@400;500;600;700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600&family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet">
 </head>
 
